--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
             position: relative;
             overflow: hidden;
             padding: 100px 0;
+            margin-bottom: 0;
         }
 
         .hero::before {
@@ -247,6 +248,7 @@
         .features {
             padding: 120px 0;
             position: relative;
+            margin-top: 0;
         }
 
         .section-title {
@@ -258,6 +260,7 @@
             -webkit-text-fill-color: transparent;
             position: relative;
             transition: all 0.3s ease;
+            padding-top: 0;
         }
 
         .section-title::after {
