--- a/index.html
+++ b/index.html
@@ -385,6 +385,9 @@
             backdrop-filter: blur(10px);
             position: relative;
             overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
         
         .pricing-card.featured {
@@ -526,13 +529,16 @@
         
         .contact-form {
             max-width: 700px;
-            margin: 0 auto; 
+            margin: 0 auto;
             background: rgba(255, 255, 255, 0.03);
             padding: 40px;
             border-radius: 20px;
             backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.1);
             transition: all 0.3s ease;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .contact-form:hover {
@@ -903,20 +909,17 @@
         }
 
         /* BUTON HİZALAMA DÜZELTMELERİ */
-        .pricing-card .cta-button {
-            display: block; /* Butonun tüm satırı kaplamasını engeller */
-            width: fit-content; /* İçeriğe göre genişlik */
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 20px; /* Üst boşluk (isteğe bağlı) */
+        .pricing-card > .cta-button {
+            margin-top: 20px;
+            align-self: center;
         }
 
         .contact-form .cta-button {
-            display: block; /* Butonun tüm satırı kaplamasını engeller */
-            width: fit-content; /* İçeriğe göre genişlik */
+            display: block;
+            width: fit-content;
             margin-left: auto;
             margin-right: auto;
-            margin-top: 10px; /* Üst boşluk (isteğe bağlı) */
+            margin-top: 10px;
         }
         /* BİTİŞ - BUTON HİZALAMA DÜZELTMELERİ */
     </style>
