--- a/index.html
+++ b/index.html
@@ -900,24 +900,16 @@
             left: 100%;
         }
 
-        /* BUTON HİZALAMA DÜZELTMELERİ (ÖNCEKİLER TEMİZLENDİ) */
-        /* .pricing-card > .cta-button { (BU BLOK TEMİZLENDİ)*/
+        /* YENİ VE BASİT BUTON ORTALAMA KURALI -- BU BLOK TAMAMEN KALDIRILIYOR */
+        /* .pricing-card .cta-button, */
+        /* .contact-form .cta-button { */
+            /* display: block; */
+            /* width: -moz-fit-content; */
+            /* width: fit-content; */
+            /* margin-left: auto;   */
+            /* margin-right: auto;  */
+            /* margin-top: 25px;    */
         /* } */
-
-        /* .contact-form .cta-button { (BU BLOK TEMİZLENDİ) */
-        /* } */
-        /* BİTİŞ - BUTON HİZALAMA DÜZELTMELERİ (ÖNCEKİLER TEMİZLENDİ) */
-
-        /* YENİ VE BASİT BUTON ORTALAMA KURALI */
-        .pricing-card .cta-button,
-        .contact-form .cta-button {
-            display: block; 
-            width: -moz-fit-content; 
-            width: fit-content; 
-            margin-left: auto;  
-            margin-right: auto; 
-            margin-top: 25px;   
-        }
 
     </style>
 </head>
