--- a/index.html
+++ b/index.html
@@ -91,16 +91,34 @@
             font-weight: 500;
             position: relative;
             padding: 8px 0 8px 0;
-            transition: color 0.3s, border-bottom 0.3s, background 0.3s;
+            transition: color 0.3s, background 0.3s;
             font-size: 17px;
-            border-bottom: 2px solid transparent;
             border-radius: 6px;
+        }
+
+        /* Nav-links için alt çizgi efekti */
+        .nav-links a:not(.discord-navbar)::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            background: var(--primary);
+            transform: scaleX(0);
+            transition: transform 0.3s ease-in-out;
+            transform-origin: bottom right;
+        }
+
+        .nav-links a:not(.discord-navbar):hover::after,
+        .nav-links a.active::after {
+            transform: scaleX(1);
+            transform-origin: bottom left;
         }
 
         .nav-links a:not(.discord-navbar):hover, .nav-links a.active {
             color: var(--primary);
             background: rgba(0,255,136,0.07);
-            border-bottom: 2px solid var(--primary);
         }
 
         .nav-links a.active {
@@ -356,6 +374,25 @@
             position: relative;
             display: inline-block;
             transition: all 0.3s ease;
+            padding-bottom: 5px;
+        }
+
+        .feature-card h3::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            background: linear-gradient(45deg, var(--primary), var(--secondary));
+            transform: scaleX(0);
+            transition: transform 0.3s ease-in-out;
+            transform-origin: bottom right;
+        }
+
+        .feature-card:hover h3::after {
+            transform: scaleX(1);
+            transform-origin: bottom left;
         }
 
         .feature-card:hover h3 {
